# afsim

./: README.md
demo/air_to_air/doc/: air_to_air.rst
demo/air_to_air/doc/changelog/: _demos_2.7_general.txt  _demos_2.8_general.txt  _demos_2.9_general.txt
resources/: README.txt
swdev/src/warlock/warlock_exec/source/: warlock.cpp
tools/: LICENSE.md  README.md  Start_cmd.bat  afsim_to_shape.py  batch_run.pl  cmd_calc.pl  convert_platforms_to_json.py  dis_sample.txt  dmscnvt.pl  ev-batch_run.pl  ev-combine.pl  ev-extract.pl  event_filter1.pl  event_filter2.pl  evt_extract_BASE.pl  evt_extract_sample1.pl  evt_extract_sample2.pl  evt_extract_sample3.pl  evt_filter.pl  evt_summary.pl  hmscnvt.pl  latlon_trans.pl  make_doc.pl  make_entity_id_map.pl  make_satcat_database.py  regex_util.pl  remove_disconnected_routes.py  rename_output.pl  shape_to_road_network.py  spc2csv.pl  tab2csv.pl  track_lengths.pl
tools/Chugger/: ChuggerClient.py  ChuggerServer.py
tools/Chugger/chugger/: PackSys.py  StreamInterface.py  __init__.py
tools/Chugger/chugger/client/: ClientManager.py  __init__.py
tools/Chugger/chugger/parser/: BaseParser.py  CmdParser.py  GuiParser.py  ParseLog.py  ParseSpace.py  __init__.py
tools/Chugger/chugger/server/: DpRunList.py  LocalManager.py  ServerManager.py  __init__.py
tools/afpy/: AAA_README.txt  afsim_preprocess.py  disjoint_set.py  route_network_tools.py  shapefile.py
tools/doc/: _documents.txt  documents_tools.txt
tools/doc/scripts/: chugger_matrix_exec.rst  convert_platforms_to_json.rst  make_satcat_database.rst  pyrunplotter.rst
tools/pyrunplotter/: demo-compareAltitude.py  demo-compareDistance.py  demo-compareFuelLevels.py  demo-compareOpticalSignatureDetection.py  demo-plot2dPosition.py  demo-plot3dPosition.py  demo-plotAltitude.py  demo-plotAmmoQuantity.py  demo-plotPlatformCounts.py  demo_filelist.txt  pyrunplotter.py  run_demos.py
tools/pyrunplotter/demos/multiresolution_demos/: optical_signature_demo.txt
tools/pyrunplotter/demos/outer_air_battle/: OAB_mrc_erc.txt
tools/pyrunplotter/demos/outer_air_battle/scenarios/: bombers.txt
tools/pyrunplotter/demos/six_dof/: six_dof_waypoint.txt  std_setup.txt
training/developer/core/doc/: _developer_training.txt
training/developer/core/labs/: config.cmake
training/developer/core/labs/inwork/: wsf_module
training/developer/core/labs/inwork/comm/: CMakeLists.txt  comm_dox.txt  wsf_cmake_extension.cmake
training/developer/core/labs/inwork/comm/data/: comm_scenario1.txt  comm_types.txt  run_all.bat  run_results.bat
training/developer/core/labs/inwork/comm/grammar/: comm_exercise.ag
training/developer/core/labs/inwork/comm/source/: CMakeLists.txt  CommPluginRegistration.cpp  DataLinkLocationMessage.hpp  DataLinkMessage.cpp  DataLinkMessage.hpp  Interface.cpp  LocationMessage.cpp  LocationMessage.hpp  SignalComm.cpp  SignalCommRegistration.hpp
training/developer/core/labs/inwork/component/: component_dox.txt  wsf_cmake_extension.cmake
training/developer/core/labs/inwork/component/data/: component_scenario.txt
training/developer/core/labs/inwork/component/source/: CMakeLists.txt  ComponentPluginRegistration.cpp  ComponentRoles.hpp  CyberSensorEffect.cpp  CyberSensorEffect.hpp  LatinumComponent.cpp  LatinumComponent.hpp  ShieldComponent.cpp  ShieldComponent.hpp  ShieldTypes.hpp
training/developer/core/labs/inwork/mover/: CMakeLists.txt  mover_dox.txt  wsf_cmake_extension.cmake
training/developer/core/labs/inwork/mover/MATLAB_Mover/: Earth.m  Gravity.m  GreatCircleRange.m  InitializeMover.m  RK4.m  Rotate2.m  Rotate3.m  SaveVariables.m  UpdateMover.m
training/developer/core/labs/inwork/mover/data/: mover_scenario.txt
training/developer/core/labs/inwork/observer/: CMakeLists.txt  observer_dox.txt  receiver.py  wsf_cmake_extension.cmake
training/developer/core/labs/inwork/sensor/: wsf_cmake_extension.cmake
training/developer/core/labs/inwork/weapon/: wsf_cmake_extension.cmake
training/developer/core/labs/inwork/xio/: CMakeLists.txt  wsf_cmake_extension.cmake
training/developer/core/labs/solution/: Doxyfile  doxygen_readme.txt  mainpage.txt
training/developer/core/labs/solution/comm/: wsf_cmake_extension.cmake
training/developer/core/labs/solution/component/: CMakeLists.txt  wsf_cmake_extension.cmake
training/developer/core/labs/solution/mover/: wsf_cmake_extension.cmake
training/developer/core/labs/solution/mover/source/: CMakeLists.txt  MATLABBallisticMover.cpp  MoverPluginRegistration.cpp
training/developer/core/labs/solution/observer/: wsf_cmake_extension.cmake
training/developer/core/labs/solution/observer/receiver/source/: CMakeLists.txt
training/developer/core/labs/solution/sensor/: CMakeLists.txt
training/developer/core/labs/solution/weapon/: CMakeLists.txt
training/developer/core/labs/solution/xio/: wsf_cmake_extension.cmake  xio_dox.txt
training/developer/core/labs/solution/xio/flight_controller/source/: CMakeLists.txt  FlightControlPkt.hpp  FlightControllerInterface.cpp  FlightControllerInterface.hpp  FlightControllerPlatformListRequest.cpp
training/developer/core/labs/solution/xio/flight_controller/source/doxygen/: Doxyfile.in  footer.txt  index-install.html
training/developer/core/slides/: 0_AFSIM_Dev_Trng_Introduction.pptx  10_AFSIM_Dev_Trng_XIO.pptx  11_AFSIM_Dev_Trng_Grammar.pptx  12_CMake_Integration.pptx  1_AFSIM_Dev_Trng_ArchitectureOverview.pptx  2_AFSIM_Dev_Trng_BuildingWithCMAKE.pptx  4_AFSIM_Dev_Trng_Sensors.pptx  5_AFSIM_Dev_Trng_Weapons.pptx  6_AFSIM_Dev_Trng_Movers.pptx  7_AFSIM_Dev_Trng_Components.pptx  8_AFSIM_Dev_Trng_Observers.pptx  9_AFSIM_Dev_Trng_Communications.pptx
training/developer/wkf/doc/: _developer_training.txt
training/developer/wkf/labs/: config.cmake
training/developer/wkf/labs/data/: wkf_training_scenario.txt
training/developer/wkf/labs/inwork/1_WKF_Training/: wkf_plugin.cmake
training/developer/wkf/labs/inwork/2_WarlockTraining/: warlock_plugin.cmake
training/developer/wkf/slides/: 1_AFSIM_Dev_Trng_Qt.pptx  2_AFSIM_Dev_Trng_WKF.pptx  3_AFSIM_Dev_Trng_Warlock.pptx
(+158 files in other folders)
